add speed, height